--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Am I Online?</h1>
     <p>This is a very simple service for checking if your application has access
     to the internet.</p>
-    <p>You use this by sending a GET request to <code>amionline.80x24.ca/UUID</code>, where UUID is whatever string you want, and then checking that the response is that exact same string.</p>
+    <p>You use this by sending a GET request to <code>https://amionline.80x24.ca/UUID</code>, where UUID is whatever string you want, and then checking that the response is that exact same string.</p>
   </body>
 </html>
