--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Am I Online?</title>
+    <style>
+    body {
+      max-width: 650px;
+      margin: 0 auto;
+      padding: 1rem;
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      text-align: center;
+    }
+    code {
+      color: blue;
+      font-size: 1rem;
+      font-family: monospace;
+    }
+    </style>
   </head>
   <body>
     <h1>Am I Online?</h1>
