--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       text-align: center;
     }
     code {
+      /* Hack to get Chrome to use 1rem for the font-size. */
+      font-family: monospace,monospace;
       font-size: 1rem;
-      font-family: monospace;
       color: darkblue;
     }
     </style>
