Use Roboto as the main font for consistency

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Am I Online?</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <style>
     body {
       max-width: 650px;
       margin: 0 auto;
       padding: 1rem;
-      font-family: Arial, sans-serif;
+      font-family: "Roboto", sans-serif;
     }
     h1 {
       text-align: center;
